--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "php": ">=7.0",
     "symfony/console": "~3.2",
     "cpliakas/git-wrapper": "~1.7",
-    "dario_swain/stash-api": "dev-master"
+    "dario_swain/stash-api": "dev-swagger"
   },
   "require-dev": {
   },
